--- a/问卷调查/Views/Home/BarHead.cshtml
+++ b/问卷调查/Views/Home/BarHead.cshtml
@@ -1,5 +1,10 @@
-﻿<div class="row">
-    <div class="col-md-12">
-        123
-    </div>
+﻿
+<div class="col-sm-2">
+    <input type="text" class="form-control" placeholder="请输入病人号...">
 </div>
+<div class="col-sm-10">
+    <span><button class="btn btn-primary">查询</button></span>
+    <span><button class="btn btn-primary">保存</button></span>
+    <span><button class="btn btn-primary" type="button" onclick="print();">打印</button></span>
+</div>
+
