--- a/问卷调查/Views/Shared/_Layout.cshtml
+++ b/问卷调查/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Routing
+@{
+    var controller = ViewContext.RouteData.Values["controller"];
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -17,47 +21,60 @@
     </environment>
 
     <style>
-        .navbar-inverse {
-            background-color: #009688;
-            border-color: #009688;
+        .navbar-inverse .navbar-brand {
+            color: white;
         }
 
-            .navbar-inverse .navbar-brand {
-                color: white;
-            }
+        .navbar-brand {
+            padding: 15px 15px 15px 0
+        }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-edit" aria-hidden="true">问卷调查</span></a>
+            <div class="navbar-header col-sm-2">
+                <a class="navbar-brand" href="#">
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                    <span>问卷调查</span>
+                </a>
             </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">设置</a></li>
-                </ul>
-                <form class="navbar-form">
-                    <input type="text" class="form-control" placeholder="请输入病人号...">
-                </form>
-            </div>
+            
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            @if (controller.ToString() == "Home")
+                            {
+                                <a href="/Settings/Index">设置</a>
+                            }
+                            else
+                            {
+                                <a href="/Home/Index">返回</a>
+                            }
+                        </li>
+                    </ul>
+                </div>
         </div>
     </nav>
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
+    <div>
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2019 - 问卷调查</p>
-        </footer>
+        @if (controller.ToString() == "Home")
+        {
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-10">
+                        <footer>
+                            <p>&copy; 2019 - 问卷调查</p>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 
     <environment include="Development">
