--- a/问卷调查/Views/Shared/_Layout.cshtml
+++ b/问卷调查/Views/Shared/_Layout.cshtml
@@ -61,10 +61,9 @@
 
     <div>
         @RenderBody()
-        <hr />
         @if (controller.ToString() == "Home")
         {
-            <div class="container-fluid">
+            <div class="container-fluid navbar-fixed-bottom text-center">
                 <div class="row">
                     <div class="col-sm-2"></div>
                     <div class="col-sm-10">
