--- a/问卷调查/Views/Settings/Ueditor.cshtml
+++ b/问卷调查/Views/Settings/Ueditor.cshtml
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <input type="file" id="file_img" style="display: none" />
     <!-- 加载编辑器的容器 -->
     <script id="myFormDesign" name="content" type="text/plain">
     </script>
@@ -17,24 +18,33 @@
     <script src="~/js/Ueditor/formdesign/leipi.formdesign.v4.js"></script>
     <!-- 实例化编辑器 -->
     <script type="text/javascript">
-        var leipiEditor = UE.getEditor('myFormDesign', {
-            //allowDivTransToP: false,//阻止转换div 为p
-            toolleipi: true,//是否显示，设计器的 toolbars
-            textarea: 'design_content',
-            //这里可以选择自己需要的工具按钮名称,此处仅选择如下五个
-            toolbars: [[
-                'fullscreen', 'source', '|', 'undo', 'redo', '|', 'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'removeformat', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', '|', 'fontfamily', 'fontsize', '|', 'indent', '|', 'justifyleft', 'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink', '|', 'horizontal', 'spechars', 'wordimage', '|', 'inserttable', 'deletetable', 'mergecells', 'splittocells']],
-            //focus时自动清空初始化时的内容
-            //autoClearinitialContent:true,
-            //关闭字数统计
-            wordCount: false,
-            //关闭elementPath
-            elementPathEnabled: false,
-            //默认的编辑区域高度
-            initialFrameHeight: 300
-            //,iframeCssUrl:"/Public/css/bootstrap/css/bootstrap.css" //引入自身 css使编辑器兼容你网站css
-            //更多其他参数，请参考ueditor.config.js中的配置项
-        });
+        var leipiEditor = UE.getEditor('myFormDesign',
+            {
+                //allowDivTransToP: false,//阻止转换div 为p
+                toolleipi: true, //是否显示，设计器的 toolbars
+                textarea: 'design_content',
+                //这里可以选择自己需要的工具按钮名称,此处仅选择如下五个
+                toolbars: [
+                    [
+                        'fullscreen', 'source', '|', 'undo', 'redo', '|', 'bold', 'italic', 'underline', 'fontborder',
+                        'strikethrough', 'removeformat', '|', 'forecolor', 'backcolor', 'insertorderedlist',
+                        'insertunorderedlist', '|', 'fontfamily', 'fontsize', '|', 'indent', '|', 'justifyleft',
+                        'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink', '|', 'horizontal',
+                        'spechars', 'wordimage', '|', 'inserttable', 'deletetable', 'mergecells', 'splittocells',
+                        'insertimg'
+                    ]
+                ],
+                //focus时自动清空初始化时的内容
+                //autoClearinitialContent:true,
+                //关闭字数统计
+                wordCount: false,
+                //关闭elementPath
+                elementPathEnabled: false,
+                //默认的编辑区域高度
+                initialFrameHeight: 300
+                //,iframeCssUrl:"/Public/css/bootstrap/css/bootstrap.css" //引入自身 css使编辑器兼容你网站css
+                //更多其他参数，请参考ueditor.config.js中的配置项
+            });
     </script>
 </body>
 
