--- a/问卷调查/wwwroot/js/Ueditor/themes/default/css/ueditor.css
+++ b/问卷调查/wwwroot/js/Ueditor/themes/default/css/ueditor.css
@@ -1835,3 +1835,7 @@ div.edui-box {
 .edui-default  .edui-pastecontainer .edui-button  .edui-state-hover .edui-plaintxticon{
     background-position: -72px -34px;
 }
+
+.edui-default .edui-toolbar .edui-for-insertimg .edui-icon {
+    background-image: url('../../../../../images/image-regular.svg');
+}
