--- a/问卷调查/Views/Settings/Ueditor.cshtml
+++ b/问卷调查/Views/Settings/Ueditor.cshtml
@@ -30,7 +30,7 @@
                         'strikethrough', 'removeformat', '|', 'forecolor', 'backcolor', 'insertorderedlist',
                         'insertunorderedlist', '|', 'fontfamily', 'fontsize', '|', 'indent', '|', 'justifyleft',
                         'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink', '|', 'horizontal',
-                        'spechars', 'wordimage', '|', 'inserttable', 'deletetable', 'mergecells', 'splittocells',
+                        'spechars', 'wordimage', '|', 'inserttable', 'deletetable', 'mergecells', 'splittocells', 'savehtml',
                         'insertimg'
                     ]
                 ],
