--- a/问卷调查/wwwroot/js/Ueditor/themes/default/css/ueditor.css
+++ b/问卷调查/wwwroot/js/Ueditor/themes/default/css/ueditor.css
@@ -1839,3 +1839,7 @@ div.edui-box {
 .edui-default .edui-toolbar .edui-for-insertimg .edui-icon {
     background-image: url('../../../../../images/image-regular.svg');
 }
+
+.edui-default .edui-toolbar .edui-for-savehtml .edui-icon {
+    background-image: url('../../../../../images/save-regular.svg');
+}
