--- a/问卷调查/wwwroot/js/Ueditor/themes/default/css/ueditor.css
+++ b/问卷调查/wwwroot/js/Ueditor/themes/default/css/ueditor.css
@@ -1843,3 +1843,7 @@ div.edui-box {
 .edui-default .edui-toolbar .edui-for-savehtml .edui-icon {
     background-image: url('../../../../../images/save-regular.svg');
 }
+
+.edui-default .edui-toolbar .edui-for-setparent .edui-icon {
+    background-image: url('../../../../../images/cog-solid.svg');
+}
