--- a/问卷调查/Views/Shared/_Layout.cshtml
+++ b/问卷调查/Views/Shared/_Layout.cshtml
@@ -22,6 +22,10 @@
     </environment>
 
     <style>
+        .navbar-inverse {
+            background-color: #286090;
+            border-color: #286090;
+        }
         .navbar-inverse .navbar-brand {
             color: white;
         }
