--- a/问卷调查/Views/Settings/Ueditor.cshtml
+++ b/问卷调查/Views/Settings/Ueditor.cshtml
@@ -31,7 +31,7 @@
                         'insertunorderedlist', '|', 'fontfamily', 'fontsize', '|', 'indent', '|', 'justifyleft',
                         'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink', '|', 'horizontal',
                         'spechars', 'wordimage', '|', 'inserttable', 'deletetable', 'mergecells', 'splittocells', 'savehtml',
-                        'insertimg','setparent'
+                        'insertimg', 'setparent', 'setcss', 'aotucompute'
                     ]
                 ],
                 //focus时自动清空初始化时的内容
