--- a/问卷调查/Views/Shared/_MobileLayout.cshtml
+++ b/问卷调查/Views/Shared/_MobileLayout.cshtml
@@ -25,9 +25,21 @@
         }
 
         p {
-            word-wrap: break-word;
             word-break: break-all;
-            overflow: hidden;
+            font-size:18px
+        }
+
+        div{
+            font-size:16px
+        }
+
+        input{
+            border:0;
+            border-bottom:1px solid
+        }
+
+        .margin-top-50{
+            margin-top:50px
         }
     </style>
 </head>
@@ -43,6 +55,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
 </environment>
 <environment exclude="Development">
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
